added testcased for locationService state contoller